<resources>
    <string name="app_name">Cabxi Cliente</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellido">Apellido</string>
    <string name="prompt_telefono">Telefono</string>
    <string name="prompt_repita">Repita Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este correo electrónico es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La Contraseña es Incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_map">Buscar Cabxi</string>
</resources>
